--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </section>
         <header id='showcase'>
             <h1>LTMM</h1>
-            <p>The Literal Middle Man for all your Security System Requirements.</p>
+            <p>The Obvious Solution for your Security System Requirements.</p>
             <div style='font-size:50px;' class='socialmedia'>
                 <a href='https://github.com/LTMM1/LTMM1.github.io'><i class='fab fa-github'></i></a>
             </div>
