--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
         <header id='showcase'>
             <h1>LTMM</h1>
             <p>The Obvious Solution for your Security System Requirements.</p>
+            <p>2% of TCV Commission on Successful Oportunities with Clients referred by a 3rd party</p>
             <div style='font-size:50px;' class='socialmedia'>
                 <a href='https://github.com/LTMM1/LTMM1.github.io'><i class='fab fa-github'></i></a>
             </div>
