tweakity tweks + links

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
     <body>
         <section id='nav-bar'>
         <nav class='navbar navbar-expand-lg navbar-light bg-dark'>
-            <a class='navbar-brand' href='https://Engergy.github.io'>LTMM</a>
+            <a class='navbar-brand' href='index.html'>LTMM</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <i class="fas fa-bars"></i>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
               <ul class="navbar-nav">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Features</a>
+                  <a class="nav-link" href="contact.html">Contact Us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="#">Pricing</a>
@@ -37,9 +37,13 @@
         <header id='showcase'>
             <h1>LTMM</h1>
             <p>The Obvious Solution for your Security System Requirements.</p>
-            <p>2% of TCV Commission on Successful Oportunities with Clients referred by a 3rd party</p>
             <div style='font-size:50px;' class='socialmedia'>
                 <a href='https://github.com/LTMM1/LTMM1.github.io'><i class='fab fa-github'></i></a>
+            </div>
+            <div class="jumbotron">
+              <h1 class="display-4">Peace of Mind, at a Competitive Price</h1>
+              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi vel nisl ac velit consectetur maximus id nec neque. Pellentesque fringilla.</p>
+              <a class="btn btn-primary btn-lg" href="contact.html" role="button">Enquire Now</a>
             </div>
         </header> 
     </body>
